--- a/package.json
+++ b/package.json
@@ -20,6 +20,11 @@
   "devDependencies": {
     "@types/react": "0.0.0",
     "@types/react-dom": "^0.14.20",
+    "@types/react-redux": "^4.4.35",
+    "@types/react-router": "^2.0.41",
+    "@types/react-router-redux": "^4.0.36",
+    "@types/redux-logger": "^2.6.32",
+    "@types/redux-thunk": "^2.1.0",
     "awesome-typescript-loader": "^3.0.0-beta.17",
     "bootstrap": "^3.3.7",
     "codelyzer": "^2.0.0-beta.4",
@@ -28,14 +33,22 @@
     "file-loader": "^0.9.0",
     "html-loader": "^0.4.4",
     "html-webpack-plugin": "^2.26.0",
+    "isomorphic-fetch": "^2.2.1",
     "jquery": "^3.1.1",
     "json-loader": "^0.5.4",
+    "lodash": "^4.17.4",
     "node-sass": "^4.2.0",
     "postcss-loader": "^1.2.1",
     "react": "^15.4.2",
     "react-bootstrap": "^0.30.7",
     "react-dom": "^15.4.2",
     "react-hot-loader": "^1.3.1",
+    "react-redux": "^5.0.1",
+    "react-router": "^3.0.0",
+    "react-router-redux": "^4.0.7",
+    "redux": "^3.6.0",
+    "redux-logger": "^2.7.4",
+    "redux-thunk": "^2.1.0",
     "rimraf": "^2.5.4",
     "sass-loader": "^4.1.1",
     "source-map-loader": "^0.1.5",
