--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,12 +2,13 @@
     "compilerOptions": {
         "outDir": "./dist/",
         "sourceMap": true,
-        "noImplicitAny": true,
+        "noImplicitAny": false,
         "module": "commonjs",
         "target": "es5",
         "jsx": "react"
     },
     "include": [
-        "./src/**/*"
+        "./src/**/*",
+        "./typings/**/*"
     ]
 }
