--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "webpack",
-    "start": "rimraf ./dist && NODE_ENV=dev && webpack-dev-server"
+    "build": "rimraf ./dist && NODE_ENV=prod webpack",
+    "start": "rimraf ./dist && NODE_ENV=dev webpack-dev-server"
   },
   "repository": {
     "type": "git",
@@ -42,6 +42,7 @@
     "react": "^15.4.2",
     "react-bootstrap": "^0.30.7",
     "react-dom": "^15.4.2",
+    "react-facebook-login": "^3.4.3",
     "react-hot-loader": "^1.3.1",
     "react-redux": "^5.0.1",
     "react-router": "^3.0.0",
